pod-security-cel/baseline/disallow-host-ports/disallow-host-ports.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/title: Disallow hostPorts in CEL expressions
    policies.kyverno.io/category: Pod Security Standards (Baseline) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`. 
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: host-ports-none
      match:
        any:
        - resources:
            kinds:
              - Pod
            operations:
            - CREATE
            - UPDATE
      validate:
        cel:
          variables:
            - name: allContainers
              expression: >-
                object.spec.containers +
                object.spec.?initContainers.orValue([]) +
                object.spec.?ephemeralContainers.orValue([])

          expressions:
            - expression: >-
                variables.allContainers.all(container,
                  container.?ports.orValue([]).all(
                    port, port.?hostPort.orValue(0) == 0
                  )
                )
              message: >-
                Use of host ports is disallowed. The field
                spec.containers[*].ports[*].hostPort must either be unset or set to `0`.
